--- a/src/main/resources/templates/admin/floging-register.html
+++ b/src/main/resources/templates/admin/floging-register.html
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="notice-write">
-                            <div class="write-title">플로깅 신청 사유</div>
+                            <div class="write-title">플로깅 내용</div>
                             <div class="write-sec">
                                 <textarea style="height: 120px;" class="write-text write-notice" type="text" readonly></textarea>
                             </div>
@@ -94,12 +94,18 @@
                                 <input class="write-text write-input" type="text" readonly>
                             </div>
                         </div>
+                        <div class="notice-write">
+                            <div class="write-title">수락시 보상갯수</div>
+                            <div class="write-sec">
+                                <input class="write-text write-input" type="text" placeholder="플로깅 완료시 주어질 보상 갯수를 적어주세요">
+                            </div>
+                        </div>
 
 
                         <div class="notice-write">
                             <div class="write-title">플로깅 거부 사유</div>
                             <div class="write-sec">
-                                <textarea style="height: 120px;" class="write-text write-notice" type="text" placeholder="플로깅 거부 사유를 적어주세요"></textarea>
+                                <textarea style="height: 70px;" class="write-text write-notice" type="text" placeholder="플로깅 거부 사유를 적어주세요"></textarea>
                             </div>
                         </div>
 
