--- a/src/main/resources/static/css/plogging/detail.css
+++ b/src/main/resources/static/css/plogging/detail.css
@@ -265,7 +265,7 @@ a {
 .production-selling-cover-image__entry {
     position: relative;
     padding-bottom: 100%;
-    background-color: #ededed;
+    background-color: #69c085;
 }
 .carousel__list__entry {
     -webkit-box-flex: 0;
@@ -530,201 +530,11 @@ a * {
     line-height: 26px;
 }
 .button--color-blue {
-    background-color: #35c5f0;
-    border-color: #35c5f0;
+    background-color: #69c085;
+    border-color: #69c085;
     color: #fff;
 }
 
 button, input[type=email], input[type=file], input[type=number], input[type=password], input[type=submit], input[type=tel], input[type=text], option, select, textarea {
     -webkit-appearance: none;
-}
-.production-selling-navigation__wrap {
-    z-index: 100;
-}
-
-@media (min-width: 768px) {
-    .production-selling-navigation {
-        background-color: #fafafa;
-        border-top: 1px solid #ededed;
-        border-bottom: 1px solid #ededed;
-    }
-}
-    .production-selling-navigation {
-        z-index: 100;
-        transition: top .1s;
-    }
-@media (min-width: 1024px) {
-    .production-selling-navigation__content {
-        padding: 0 60px;
-    }
-}
-        .production-selling-navigation__content {
-            max-width: 1136px;
-            margin: 0 auto;
-        }
-@media (min-width: 1024px) {
-    .production-selling-navigation__list {
-        width: 100%;
-    }
-}
-    .production-selling-navigation__list {
-        display: flex;
-    }
-.production-selling-navigation__list>li {
-    -webkit-box-flex: 1;
-    flex: 1 0 0px;
-}
-li:first-child>.production-selling-navigation__item {
-    border-left: none;
-}
-@media (min-width: 768px) {
-    .production-selling-navigation__item {
-        left: 1px;
-        padding: 14px 10px 15px;
-        font-size: 15px;
-        background-color: #fafafa;
-    }
-}
-    .production-selling-navigation__item {
-        position: relative;
-        display: block;
-        top: 1px;
-        margin: -1px 0 0 -1px;
-        box-sizing: border-box;
-        text-align: center;
-        color: #424242;
-        line-height: 20px;
-        font-weight: 700;
-        border-color: transparent transparent #ededed #ededed;
-        transition: color .1s;
-    }
-@media (min-width: 1256px) {
-    .container {
-        margin-right: auto;
-        margin-left: auto;
-        width: 1136px;
-        max-width: 100%;
-        box-sizing: border-box;
-        min-height: 1px;
-    }
-}
-@media (min-width: 1256px) {
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-        box-sizing: border-box;
-        margin-right: -10px;
-        margin-left: -10px;
-    }
-}
-
-@media (min-width: 1024px) and (min-width: 1256px) {
-    .col-lg-8 {
-        padding-right: 10px;
-        padding-left: 10px;
-    }
-}
-
-    @media (min-width: 1024px) {
-        .col-lg-8 {
-            position: relative;
-            width: 100%;
-            min-height: 1px;
-            box-sizing: border-box;
-            -webkit-box-flex: 0;
-            -moz-box-flex: 0;
-            flex: 0 0 66.6666666667%;
-            max-width: 66.6666666667%;
-        }
-    }
-@media (min-width: 768px) {
-    .production-selling-content {
-        margin: 60px auto 0;
-    }
-}
-.production-selling-content {
-    max-width: 692px;
-}
-@media (min-width: 768px) {
-    .production-selling-section {
-        margin: 0 0 80px;
-        padding: 0;
-    }
-}
-.production-selling-section__header {
-    display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    align-items: center;
-    margin: 20px 0;
-}
-footer, header, main {
-    box-sizing: border-box;
-    position: relative;
-}
-@media (min-width: 768px) {
-    .production-selling-section__title {
-        font-size: 18px;
-        line-height: 24px;
-    }
-}
-    .production-selling-section__title {
-        font-weight: 700;
-        color: #000;
-    }
-.production-selling-section__title>.count {
-    color: #35c5f0;
-    margin-left: 4px;
-}
-
-@media (min-width: 768px) {
-    .production-selling-section__right {
-        font-size: 15px;
-        line-height: 21px;
-    }
-}
-    .production-selling-section__right {
-        font-weight: 700;
-        color: #000;
-    }
-.production-selling-section__right>a, .production-selling-section__right>button {
-    color: #35c5f0;
-    transition: opacity .1s;
-    font: inherit;
-    margin: 0;
-    padding: 0;
-    background: none;
-    border: none;
-}
-.gallery__right-arrow {
-    width: 16px;
-    height: 16px;
-    color: #757575;
-}
-.css-cssveg {
-    position: relative;
-}
-.css-11zhy3w {
-    overflow: hidden;
-}
-.css-1neucjp {
-    display: flex;
-    flex-wrap: nowrap;
-    -webkit-box-align: stretch;
-    align-items: stretch;
-    min-height: 100%;
-}
-.css-q5tg3w {
-    flex: 0 0 auto;
-    user-select: none;
-    box-sizing: border-box;
-}
-.carousel__list__entry {
-    -webkit-box-flex: 0;}
-.css-1f3egm3 {
-    display: flex;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
 }
