--- a/src/main/resources/static/css/login/new_password.css
+++ b/src/main/resources/static/css/login/new_password.css
@@ -94,10 +94,6 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
     -moz-appearance: textfield;
 }
 
-._1qwAY {
-    padding: 8px 15px 9px;
-}
-
 ._3ASDR {
     display: inline-block;
     width: 100%;
@@ -114,6 +110,15 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
     transition: border-color .1s,background-color .1s;
     resize: none;
     -webkit-appearance: none;
+}
+
+._3ASDR.focus-visible, html:not(.js-focus-visible) ._3ASDR:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(74, 213, 161, 0.21);
+}
+
+._1qwAY {
+    padding: 8px 15px 9px;
 }
 
 ._3Z6oR {
@@ -137,8 +142,8 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
 }
 
 ._3AsCW {
-    background-color: #35c5f0;
-    border-color: #35c5f0;
+    background-color: #7aab9a;
+    border-color: #7aab9a;
     color: #fff;
 }
 
@@ -161,3 +166,13 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
     margin-top: 20px;
 }
 
+.layout, .page, body, html {
+    height: 100%;
+}
+
+@media (-ms-high-contrast:active), (hover: hover), (-ms-high-contrast:none) {
+    ._3AsCW.focus-visible, ._3AsCW:hover, html:not(.js-focus-visible) ._3AsCW:focus {
+        border-color: #3b7661;
+        background-color: #3b7661;
+    }
+}
