--- a/src/main/resources/static/css/login/new_password_check.css
+++ b/src/main/resources/static/css/login/new_password_check.css
@@ -114,9 +114,9 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
 }
 
 ._3AsCW._36MJM, ._3AsCW:disabled {
-    background-color: #a3e4f8;
-    border-color: #a3e4f8;
-    color: #e5f9ff;
+    background-color: #7aab9a;
+    border-color: #7aab9a;
+    color: #FFF;
 }
 
 ._3Z6oR:disabled {
@@ -217,8 +217,8 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
 }
 
 ._3SroY:not(._36pnd)._326l9, ._3SroY:not(._36pnd):disabled {
-    background-color: #c7effb;
-    border-color: #c7effb;
+    background-color: #7aab9a36;
+    border-color: #7aab9a36;
     color: #fff;
 }
 
@@ -260,13 +260,19 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
 }
 
 .css-1nc5o6j {
-    color: #35c5f0;
+    color: #7aab9a;
     font-size: 12px;
     line-height: 20px;
     font-weight: bold;
 }
 
-
+.css-6iq7la {
+    border: 1px solid rgb(219, 219, 219);
+    min-height: 45px;
+    padding: 0px 16px;
+    background: rgb(255, 255, 255);
+    margin-bottom: 10px;
+}
 
 
 
