--- a/src/main/resources/static/css/login/new_password_email.css
+++ b/src/main/resources/static/css/login/new_password_email.css
@@ -172,9 +172,9 @@ a {
 }
 
 ._3AsCW._36MJM, ._3AsCW:disabled {
-    background-color: #a3e4f8;
-    border-color: #a3e4f8;
-    color: #e5f9ff;
+    background-color: #7aab9a;
+    border-color: #7aab9a;
+    color: #FFF;
 }
 
 [role=button]:disabled, a:disabled, button:disabled, input[type=button]:disabled, input[type=reset]:disabled, input[type=submit]:disabled {
@@ -186,8 +186,8 @@ a {
 }
 
 ._3SroY:not(._36pnd)._326l9, ._3SroY:not(._36pnd):disabled {
-    background-color: #c7effb;
-    border-color: #c7effb;
+    background-color: #7aab9a36;
+    border-color: #7aab9a36;
     color: #fff;
 }
 
@@ -249,7 +249,7 @@ a {
 }
 
 .css-1nc5o6j {
-    color: #35c5f0;
+    color: #3b7661;
     font-size: 12px;
     line-height: 20px;
     font-weight: bold;
