--- a/src/main/resources/templates/mypage/users-edit.html
+++ b/src/main/resources/templates/mypage/users-edit.html
@@ -24,7 +24,7 @@
                     <li class="page-navigation__item"><a class="active" href="#" target="_self">프로필 설정</a>
                     </li>
                     <li class="page-navigation__item"><a class="" href="#" target="_self">플로깅</a></li>
-                    <li class="page-navigation__item"><a class="" href="#" target="_self">나의 휴지롤</a></li>
+                    <li class="page-navigation__item"><a class="" href="#" target="_self">나의 개인관리</a></li>
                 </ul>
             </nav>
             <nav class="page-navigation myhome-nav__contents">
@@ -51,7 +51,7 @@
                             <div class="expert-form-group__input">
                                 <div class="edit-user-info__form-item__field">
                                     <div class="input-group email-input"><span class="email-input__local"><label><input
-                                            class="form-control" placeholder="이메일" size="1" value="doen718"><span
+                                            class="form-control" placeholder="이메일" size="1" value><span
                                             class="form-control-blind">이메일 앞 주소 입력하기</span></label></span><span
                                             class="email-input__separator">@</span><span
                                             class="email-input__domain"><label><select class="form-control"><option
@@ -80,7 +80,7 @@
                         <div class="expert-form-group__content">
                             <div class="expert-form-group__input">
                                 <div class="edit-user-info__form-item__field">
-                                    <div class="edit-user-info__input"><input class="form-control" value="kde2491">
+                                    <div class="edit-user-info__input"><input class="form-control" value>
                                         <div class="edit-user-info__input__error"></div>
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
                                 <div class="edit-user-info__form-item__field">
                                     <div class="DayPickerInput"><input placeholder="YYYY-MM-DD"
                                                                        class="form-control date-input__text"
-                                                                       value="2005-07-18"></div>
+                                                                       value></div>
                                 </div>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                         <div class="expert-form-group__content">
                             <div class="expert-form-group__input">
                                 <div class="edit-user-info__form-item__field"><input maxlength="41" class="form-control"
-                                                                                     value="test"></div>
+                                                                                     value></div>
                             </div>
                         </div>
                     </div>
