--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link href="../../resources/static/css/login/login.css" rel="stylesheet"/>
+    <link href="../../resources/static/css/font.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="css-b3oum6">
@@ -13,7 +17,7 @@
                 <svg width="147" height="50" viewBox="0 0 147 50" preserveAspectRatio="xMidYMid meet"
                      class="css-1ekfro2 ebon26m3">
                     <g fill="none" fill-rule="evenodd">
-                        <path fill="#35C5F0"
+                        <path fill="#7aab9a"
                               d="M38.42 0H8.35C4.03 0 0 4.02 0 8.33v33.34C0 45.98 4.03 50 8.35 50h33.41c4.33 0 8.35-4.02 8.35-8.33V8.33C50.11 4.02 46.1 0 41.76 0h-3.34z"></path>
                         <path fill="#FFF"
                               d="M36.73 26.02a3.31 3.31 0 0 1-3.31-3.3 3.31 3.31 0 0 1 3.31-3.31 3.31 3.31 0 0 1 3.31 3.3 3.31 3.31 0 0 1-3.31 3.31zm-2.47 8.7h-19.1V22.08l9.55-6.65 5.47 3.81a7.35 7.35 0 0 0-.86 3.47 7.4 7.4 0 0 0 4.94 6.97v5.02zm2.47-19.4c-.84 0-1.65.14-2.4.4l-7.93-5.5a2.97 2.97 0 0 0-3.39 0l-11.86 8.24a2.96 2.96 0 0 0-1.27 2.43v16.13a2.96 2.96 0 0 0 2.97 2.95h23.72a2.96 2.96 0 0 0 2.96-2.96v-7.44a7.4 7.4 0 0 0 4.61-6.85 7.4 7.4 0 0 0-7.41-7.4z"></path>
@@ -67,7 +71,7 @@
                 </a></section>
                 <a class="css-1gdr9kc ebon26m1" href="/customer_center">로그인에 문제가 있으신가요?</a>
                 <section class="css-1wsvmq e16e5uzo5">
-                    <button type="button" class="css-1kz0wiu e16e5uzo4">비회원 주문 조회하기</button>
+                    <button type="button" class="css-1kz0wiu e16e5uzo4"></button>
                     <div class="css-h2yjam e16e5uzo3" style="overflow: hidden;"></div>
                 </section>
             </div>
