--- a/src/main/resources/templates/login/new_password_check.html
+++ b/src/main/resources/templates/login/new_password_check.html
@@ -5,6 +5,10 @@
     <title>이메일 인증코드 확인</title>
 </head>
 <link href="../../resources/static/css/login/new_password_check.css" rel="stylesheet"/>
+<link href="../../resources/static/css/font.css" rel="stylesheet"/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
 <body>
 <div class="css-b3oum6">
@@ -12,13 +16,13 @@
         <div class="css-1wv4onu e1lpfzz13">
             <div class="css-1ootb31 eqepphp7">
                 <div class="css-epwnf3 eqepphp6">이메일로 전송된 인증코드를 입력해주세요.</div>
-                <div class="css-1fyq8cc eqepphp5">
+                <div class="css-6iq7la eqepphp5">
                     <div class="css-1cvdtkt eqepphp4"><input type="text" placeholder="인증코드 6자리 입력"
                                                              class="css-jh3u7 eqepphp3" value=""><span
                             class="css-2ofpti eqepphp2">00:00</span>
                         <button class="_3Z6oR _3AsCW _2tsrJ css-1gabnbc edfw59v0" type="button" disabled="">확인</button>
                     </div>
-                    <div class="css-bxn4wb eqepphp1">인증코드가 만료되었습니다.</div>
+                    <!--<div class="css-bxn4wb eqepphp1">인증코드가 만료되었습니다.</div>-->
                 </div>
                 <div class="css-1r0yqr6 eqepphp0">
                     <div class="css-1vor8y5 ejevacd2">
@@ -33,8 +37,8 @@
             </div>
             <button class="_1eWD8 _3SroY _27do9 css-1lc2vx1 e1lpfzz10" disabled="">비밀번호 재설정하기</button>
             <div class="css-156jhri e1lpfzz12">회원가입 시 입력한 정보가 기억나지 않는다면?<a href="tel:1670-0876"
-                                                                           class="css-1nc5o6j e1lpfzz11">고객센터
-                문의하기(1670-0876)</a></div>
+                                                                           class="css-1nc5o6j e1lpfzz11">1대1
+                문의하기(마이페이지)</a></div>
         </div>
     </div>
 </div>
