--- a/src/main/resources/templates/login/new_password_email.html
+++ b/src/main/resources/templates/login/new_password_email.html
@@ -5,6 +5,10 @@
     <title>가입한 이메일 주소 입력 페이지</title>
 </head>
 <link href="../../resources/static/css/login/new_password_email.css" rel="stylesheet"/>
+<link href="../../resources/static/css/font.css" rel="stylesheet"/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
 <body>
 <div class="css-b3oum6">
@@ -19,8 +23,8 @@
         </div>
         <button class="_1eWD8 _3SroY _27do9 css-1lc2vx1 e1lpfzz10" disabled="" type="button">이메일로 인증코드 받기</button>
         <div class="css-156jhri e1lpfzz12">회원가입 시 입력한 정보가 기억나지 않는다면?<a href="tel:1670-0876"
-                                                                       class="css-1nc5o6j e1lpfzz11">고객센터
-            문의하기(1670-0876)</a></div>
+                                                                       class="css-1nc5o6j e1lpfzz11">1대1
+            문의하기(마이페이지)</a></div>
     </div>
 </div>
 </div>
